# BrandIntelligence

./: README.md  VALIDATION.md  docker-compose.yml  run-kali.sh
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/schemas/: brand.py  scan.py
backend/app/services/: pipeline.py
backend/app/workers/: tasks.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_pipeline.py
cli/: brandintel.py
frontend/: index.html  package.json
frontend/src/pages/: App.tsx
