[project]
name = "brandintelligence-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "psycopg[binary]",
  "redis",
  "celery",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
